Support for zip export Delete old files automatically with a cronjob

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,22 +1,3 @@
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#download_all {
+    margin-top: 10px;
+}
